Experiment2-Deploy simple applications/Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: demo
     labels:
     app: demo
spec:
    replicas: 1
    selector:
       matchLabels:
            app: demo
    template:
       metadata:
            labels:
               app: demo
       spec:
           containers:
           - name: demo
              imagePullPolicy: Always
              image: registry.cn-shanghai.aliyuncs.com/kubesre01/demo:v1
              ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
     name: demo-svc
spec:
    type: ClusterIP
    selector:
       app: demo
    ports:
        - port: 8080
           targetPort: 8080
